fixed button list overlapping with the right hand side bar

--- a/client/src/constants/main.scss
+++ b/client/src/constants/main.scss
@@ -211,7 +211,7 @@ label > h4 {
 .button {
   background: $lightsilver;
   color: $icon-color;
-  margin-left: 1px;
+  margin-left: 0px;
 }
 
 .highlight {
